--- a/internship project/main.css
+++ b/internship project/main.css
@@ -20,30 +20,35 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: white;
-  margin-top: 10px;
+  margin-top: 40px;
   border-radius: 5px;
   padding-bottom: 10px;
 }
 .signup-holder p {
   text-align: left;
-  padding-top: 5px;
+  padding-top: 10px;
   font-weight: 100;
   margin-left: 25%;
+}
+.signup-holder p a {
+  text-decoration: none;
+  color: blue;
 }
 .signup-holder input {
   width: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  border: 1px grey solid;
+  border: none;
   padding-top: 5px;
   padding-bottom: 5px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
+  border-bottom: 1px gray solid;
 }
 .icon-holder {
   margin-left: 250px;
-  margin-top: 50px;
-  padding-top: 50px;
+  margin-top: 10px;
+  /* padding-top: 10px; */
 }
 .signup-button {
   width: 15%;
@@ -58,32 +63,74 @@ body {
   border-radius: 3px;
   font-weight: bold;
 }
+.option-btn-holder {
+  width: 148px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: blue;
+  margin-top: 10px;
+  border: 1px blue solid;
+}
+.employer-btn {
+  border: none;
+  background-color: white;
+  padding: 5px 7px 5px 3px;
+  cursor: pointer;
+}
+.normal-user-btn {
+  border: none;
+  background-color: blue;
+  color: white;
+  font-weight: 150;
+  padding-left: 2px;
+  cursor: pointer;
+}
+.employer-btn-1 {
+  border: none;
+  background-color: blue;
+  padding: 5px 7px 5px 3px;
+  cursor: pointer;
+  color: white;
+}
+.normal-user-btn-1 {
+  border: none;
+  background-color: white;
+  color: black;
+  font-weight: 150;
+  cursor: pointer;
+  padding: 5px 1px 5px 1px;
+}
 .login-holder {
   width: 40%;
-  display: block;
+  /* display: block; */
   margin-left: auto;
   margin-right: auto;
   background-color: white;
-  margin-top: 10px;
+  margin-top: 100px;
   border-radius: 5px;
   padding-bottom: 10px;
 }
 
 .login-holder p {
-  text-align: center;
+  text-align: left;
   padding-top: 5px;
   font-weight: 100;
-  /* margin-left: 25%; */
+  margin-left: 25%;
+}
+.login-holder p a {
+  text-decoration: none;
+  color: blue;
 }
 .login-holder input {
   width: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  border: 1px grey solid;
+  border: none;
+  border-bottom: 1px grey solid;
   padding-top: 5px;
   padding-bottom: 5px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 /* .icon-holder {
   margin-left: 250px;
@@ -98,8 +145,14 @@ body {
   margin-right: auto;
   background-color: blue;
   color: white;
-  border: none;
+  border: 2px blue solid;
   padding: 5px;
   border-radius: 3px;
   font-weight: bold;
+}
+.login-button:hover {
+  cursor: pointer;
+  color: blue;
+  background-color: white;
+  border: 2px blue solid;
 }
